@@ -1565,5 +1565,7 @@ return [
      'search'              => 'Rechercher...',
      //update 21-12-2016
      'selected-user-is-already-the-owner' => 'L\'utilisateur sélectionné est déjà le propriétaire du ticket.',
+     //updated 15-5-2017
+     'session-expired'     => 'Session expired or invalid, please try again.',
 
 ];
